--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt build && cd functions/send-mailgun && npm install",
+    "build": "nuxt build && cd functions/sendgridFire && npm install",
     "start": "nuxt start",
-    "generate": "nuxt generate && cd functions/send-mailgun && npm install"
+    "generate": "nuxt generate && cd functions/sendgridFire && npm install"
   },
   "dependencies": {
     "nuxt": "^2.0.0",
